<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.bst.hcoder.MessageActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textMessageStatus"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/text_have_not_message"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTextHint"
                android:text="@string/button_accept"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorTextHint"
                android:text="@string/button_decline"
                android:textColor="@android:color/white"
                android:visibility="invisible" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/text_location"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/hint_username"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_message"
            android:textSize="18sp" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
