<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".Account">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewUsername"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextHint"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/user_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewTousername"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorTextHint"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewSelected"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorTextHint"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewEncoded"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorTextHint"
            android:layout_marginBottom="20dp"
            android:textSize="10sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewCodebook"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorTextHint"
            android:layout_marginBottom="20dp"
            android:textSize="8sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_select"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonExecute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_execute"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_user"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>